--- a/projects/projectStyle.css
+++ b/projects/projectStyle.css
@@ -20,19 +20,6 @@ button {
   text-decoration: none;
 }
 
-header {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  padding: 30px 10%;
-}
-
 body {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -42,67 +29,6 @@ body {
       -ms-flex-direction: column;
           flex-direction: column;
   min-height: 100vh;
-}
-
-.normalText {
-  color: #FDFFFC;
-  font-size: 17px;
-  padding-left: 30px;
-}
-
-.logo {
-  cursor: pointer;
-  width: 6%;
-  height: 5%;
-}
-
-.navLinks {
-  list-style: none;
-}
-
-.navLinks li {
-  display: inline-block;
-  padding: 0px 20px;
-}
-
-.navLinks li a {
-  -webkit-transition: all 0.3 ease 0s;
-  transition: all 0.3 ease 0s;
-}
-
-.navLinks li a:hover {
-  -webkit-transition: all 0.3 ease 0s;
-  transition: all 0.3 ease 0s;
-  color: #E71D36;
-}
-
-button {
-  padding: 9px 25px;
-  color: #232b2b;
-  background-color: #2EC4B6;
-  border: none;
-  border-radius: 50px;
-  cursor: pointer;
-  -webkit-transition: all 0.3s ease 0s;
-  transition: all 0.3s ease 0s;
-}
-
-button:hover {
-  background-color: #232b2b;
-  color: #2EC4B6;
-}
-
-.question {
-  text-align: left;
-  padding-left: 30px;
-  color: antiquewhite;
-}
-
-.title {
-  color: silver;
-  padding: 0px;
-  text-align: center;
-  color: antiquewhite;
 }
 
 footer {
@@ -155,4 +81,4 @@ footer {
   vertical-align: baseline;
   float: left;
 }
-/*# sourceMappingURL=style.css.map */
+/*# sourceMappingURL=projectStyle.css.map */
